fixed overflow issue (was caused by the grid gap size being set as a percentage). Still need to fix the overlay button sizing

--- a/src/scss/blocks/contact.scss
+++ b/src/scss/blocks/contact.scss
@@ -1,4 +1,8 @@
-#contact{
+#contact-wrapper{
+    padding-top: 30px;
+}
+
+#contact-header{
     margin-bottom: 30px;
 }
 
@@ -10,7 +14,6 @@
     a{
         padding-left: 30px;
         padding-right: 30px;
-
     }
     img{
         height: 5rem;
