--- a/src/scss/blocks/gallery.scss
+++ b/src/scss/blocks/gallery.scss
@@ -33,7 +33,8 @@
     justify-items: center;
     align-items: center;
     justify-content: space-around;
-    gap: 3%;
+    align-content: space-around;
+    gap: 3rem;
     margin: auto;
     div{
       width: 100%;
@@ -78,10 +79,17 @@
       justify-content: center;
       align-content: center;
       justify-items: center;
-  
-      a{
-          margin: 5px;
-          width: 150%;
+      div{
+        height: 100%;
+        width: 100%;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-row-gap: 2px;
+        justify-content: center;
+        justify-items: center;
+        div, a{
+          width: 100%;
+        }
       }
   }
 }
